// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pricing1 snapshot 1`] = `
<DocumentFragment>
  <span
    class="sc-aXZVg dhYZDp"
  >
    <span
      class="sc-gEvEer fvHQdC price"
    >
      $400.40
    </span>
  </span>
</DocumentFragment>
`;

exports[`Pricing1 w/ discount snapshot 1`] = `
<DocumentFragment>
  <span
    class="sc-eqUAAy fghmnz mb-1"
  >
    Sale 15% OFF
  </span>
  <span
    class="sc-aXZVg dxxgxf"
  >
    <span
      class="sc-gEvEer edebcW price"
    >
      $400.40
    </span>
  </span>
  <span
    class="sc-fqkvVR eYjNkW ml-2 p-1"
  >
    $340.34
  </span>
</DocumentFragment>
`;
